--- a/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge/MainPage.xaml
+++ b/LDNotificationBadge/LDNotificationBadge/LDNotificationBadge/MainPage.xaml
@@ -6,9 +6,8 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <Label Text="Introduce la cantidad de notificaciones"/>
+        <Entry Placeholder="cantidad ej. 1"/>
     </StackLayout>
 
 </ContentPage>
